--- a/c_team/Gemfile
+++ b/c_team/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 gem 'rails', '4.2.8'
 gem 'sass-rails', '~> 5.0'
 gem 'bootstrap-sass'
-gem 'uglifier', '>= 1.3.0'
+gem 'uglifier'
 gem 'coffee-rails', '~> 4.1.0'
 gem 'therubyracer', platforms: :ruby
 gem 'jquery-rails'
