bootstrapテーマHonokaを適用

--- a/c_team/Gemfile
+++ b/c_team/Gemfile
@@ -2,7 +2,8 @@ source 'https://rubygems.org'
 
 gem 'rails', '4.2.8'
 gem 'sass-rails', '~> 5.0'
-gem 'bootstrap-sass'
+# gem 'bootstrap-sass'
+gem 'honoka-rails'
 gem 'uglifier'
 gem 'coffee-rails', '~> 4.1.0'
 gem 'therubyracer', platforms: :ruby
