--- a/c_team/Gemfile
+++ b/c_team/Gemfile
@@ -15,8 +15,8 @@ gem 'bcrypt', '~> 3.1.7'
 gem 'rails-i18n'
 gem 'kaminari'
 gem 'puma'
-gem 'carrierwave'
-gem 'mini_magick'
+# gem 'carrierwave'
+# gem 'mini_magick'
 gem 'enumerize'
 gem 'faker'
 gem 'nested_form'
