--- a/c_team/Gemfile
+++ b/c_team/Gemfile
@@ -22,6 +22,7 @@ gem 'faker'
 # gem 'nested_form'
 #gem 'mysql2'
 gem 'babel-transpiler'
+gem 'js_cookie_rails'
 
 group :test do
   gem 'factory_girl_rails'
